[gd_scene load_steps=17 format=2]

[ext_resource path="res://assets/Songs/medieval-epic-adventure-action-heroic-powerful-opener-intro-117935.mp3" type="AudioStream" id=1]
[ext_resource path="res://ui/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://assets/UI/MainMenu/Timeline_0005.png" type="Texture" id=3]
[ext_resource path="res://assets/UI/MainMenu/Timeline_0006.png" type="Texture" id=4]
[ext_resource path="res://assets/UI/MainMenu/Timeline_0003.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/MainMenu/Timeline_0004.png" type="Texture" id=6]
[ext_resource path="res://assets/UI/MainMenu/Timeline_0001.png" type="Texture" id=7]
[ext_resource path="res://assets/UI/MainMenu/Timeline_0002.png" type="Texture" id=8]
[ext_resource path="res://assets/fonts/pausefont.tres" type="DynamicFont" id=9]
[ext_resource path="res://assets/UI/largebutton.png" type="Texture" id=10]
[ext_resource path="res://assets/UI/largebuttonhover.png" type="Texture" id=11]
[ext_resource path="res://assets/UI/largebuttonclicked.png" type="Texture" id=12]
[ext_resource path="res://RateUs.gd" type="Script" id=13]
[ext_resource path="res://assets/sounds/Click.mp3" type="AudioStream" id=14]
[ext_resource path="res://ui/Tutorial.tscn" type="PackedScene" id=15]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 8.0
} ]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 400.023, 300.027 )
frames = SubResource( 1 )
speed_scale = 1.5

[node name="Title" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -160.0
margin_right = 20.0
margin_bottom = -120.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -86.5976
margin_top = 67.4446
margin_right = 47.4024
margin_bottom = 130.445
rect_scale = Vector2( 1.32847, 1.32847 )

[node name="Start Game" type="TextureButton" parent="VBoxContainer"]
margin_right = 134.0
margin_bottom = 25.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="VBoxContainer/Start Game"]
margin_left = 1.68179
margin_top = 6.72717
margin_right = 131.682
margin_bottom = 20.7272
custom_fonts/font = ExtResource( 9 )
text = "Start"
align = 1

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 29.0
margin_right = 134.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 5 )

[node name="RateUs" type="TextureButton" parent="VBoxContainer"]
margin_top = 38.0
margin_right = 134.0
margin_bottom = 63.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 11 )
script = ExtResource( 13 )

[node name="Label" type="Label" parent="VBoxContainer/RateUs"]
margin_left = 1.68179
margin_top = 6.72717
margin_right = 131.682
margin_bottom = 20.7272
custom_fonts/font = ExtResource( 9 )
text = "Rate us"
align = 1

[node name="Click" type="AudioStreamPlayer" parent="VBoxContainer/RateUs"]
stream = ExtResource( 14 )
volume_db = -20.0

[node name="Label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = 10.0
margin_right = -14.0
margin_bottom = 24.0
text = "By Stan Depuydt & Piet Goris"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -15.0
autoplay = true

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -10.0

[node name="Tutorial" parent="." instance=ExtResource( 15 )]
visible = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="pressed" from="VBoxContainer/Start Game" to="." method="_on_Start_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/RateUs" to="VBoxContainer/RateUs" method="_on_RateUs_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
